fix layout on mobile for number location gallery

--- a/src/components/NumberLocationGallery.module.css
+++ b/src/components/NumberLocationGallery.module.css
@@ -67,7 +67,7 @@
     .galleryContainer {
         padding: 8px 0;
         max-width: 95vw;
-        width: 95vw;
+        width: 90vw;
     }
 }
 
